# internal/apiserver/visualization.go
@@ -13,6 +13,7 @@ import (
 type VisualizationRequestBody struct {
 	invoice  []byte
 	format   string
+	language string
 }
 
 func (b *VisualizationRequestBody) parse(req *http.Request) error {
@@ -21,6 +22,13 @@ func (b *VisualizationRequestBody) parse(req *http.Request) error {
 		return InvoiceError("format.missing")
 	} else if b.format != entity.UblFormat && b.format != entity.D16bFormat {
 		return InvoiceError("format.unknown")
+	}
+
+	b.language = req.PostFormValue("lang")
+	if b.language == "" {
+		b.language = entity.EnglishLanguage
+	} else if b.language != entity.EnglishLanguage && b.language != entity.SlovakLanguage {
+		return InvoiceError("language.unknown")
 	}
 
 	var err error
@@ -42,7 +50,7 @@ func (a *App) createVisualization(res http.ResponseWriter, req *http.Request) er
 	if err = a.xsdValidator.Validate(requestBody.invoice, requestBody.format); err != nil {
 		return InvoiceError("xsd.validation.failed").WithDetail(err)
 	}
-	if err = a.invoiceValidator.Validate(req.Context(), requestBody.invoice, requestBody.format); err != nil {
+	if err = a.invoiceValidator.Validate(req.Context(), requestBody.invoice, requestBody.format, requestBody.language); err != nil {
 		if _, ok := err.(*invoiceValidator.ValidationError); ok {
 			return handlerutil.NewBadRequestError("invoice.validation.failed").WithDetail(err)
 		} else if _, ok := err.(*invoiceValidator.RequestError); ok {
