# invoice-validator/src/index.mjs
@@ -1,34 +1,47 @@
 import express from 'express'
-import fs from 'fs'
 import SaxonJS from 'saxon-js'
+import config from './config.mjs'
+import {invoiceFormats, languages} from './constants.mjs'
+import {getXPathQuery, getErrorMessage, getSchema} from './helpers.mjs'
 
 const app = express()
-const port = process.env.PORT || 8082
-const ublSchemaPath = process.env.UBL_SCHEMA_PATH || 'data/ubl2.1/en16931-schema.sef.json'
-const d16bSchemaPath = process.env.D16B_SCHEMA_PATH || 'data/d16b/en16931-schema.sef.json'
 
 app.use(express.json())
 
 app.post('/', async (req, res) => {
-  if (!['ubl2.1', 'd16b'].includes(req.query.format)) {
+  if (!Object.values(invoiceFormats).includes(req.query.format)) {
     res.status(400).send({error: 'unknown format'})
+    return
+  }
+
+  if (!Object.values(languages).includes(req.query.lang)) {
+    res.status(400).send({error: 'unknown language'})
     return
   }
 
   try {
     const {principalResult} = await SaxonJS.transform({
-        stylesheetInternal: schemas[req.query.format],
+        stylesheetInternal: getSchema(req.query.format),
         sourceText: req.body.xml,
         destination: 'document',
     }, 'async')
 
     // Find failed asserts in result
-    let result = SaxonJS.XPath.evaluate('.//*:failed-assert/*:text/text()', principalResult)
-    if (result == null) {
+    let result = SaxonJS.XPath.evaluate(
+      getXPathQuery(req.query.lang),
+      principalResult,
+      {
+        namespaceContext: {svrl: 'http://purl.oclc.org/dsdl/svrl'},
+        resultForm: 'array',
+      }
+    )
+
+    if (result.length === 0) {
       res.send({ok: true})
     } else {
-      if(!Array.isArray(result)) result = [result]
-      res.status(400).send({errors: result.map((failedAssert) => failedAssert.data)})
+      res.status(400).send({
+        errors: result.map(getErrorMessage(req.query.lang))
+      })
     }
   } catch (e) {
     console.log(e)
@@ -36,12 +49,6 @@ app.post('/', async (req, res) => {
   }
 })
 
-// Load schemas to memory
-const schemas = {
-  'ubl2.1': JSON.parse(fs.readFileSync(ublSchemaPath)),
-  'd16b': JSON.parse(fs.readFileSync(d16bSchemaPath)),
-}
-
-app.listen(port, () => {
-  console.log(`App listening at port ${port}`)
+app.listen(config.port, () => {
+  console.log(`App listening at port ${config.port}`)
 })
